[gd_scene load_steps=11 format=3]

[ext_resource type="Script" path="res://Scripts/CharacterSelectPlate.gd" id="1_5w84g"]
[ext_resource type="Texture2D" uid="uid://dh0ko2eu6m5td" path="res://Scenes/Sprites/Character Plate.png" id="1_guiq0"]
[ext_resource type="Texture2D" uid="uid://fyqhnrhibt6g" path="res://Scenes/Sprites/Seals/Default.png" id="3_ghym1"]
[ext_resource type="Texture2D" uid="uid://bi8hb75fga3fg" path="res://Scenes/Sprites/Titles/Default.png" id="4_o3e15"]
[ext_resource type="FontFile" uid="uid://3x1abt1jgvne" path="res://Fonts/GodsendPro.ttf" id="5_y8k1c"]
[ext_resource type="Texture2D" uid="uid://c2fpg3ppj5ckk" path="res://Scenes/Sprites/Character Locked.png" id="6_0407a"]
[ext_resource type="FontFile" uid="uid://qusa5odd3rt0" path="res://Fonts/MatchupPro.ttf" id="6_lkfh3"]
[ext_resource type="Texture2D" uid="uid://0jr7jmf50pt" path="res://Scenes/Sprites/Portraits/Default.png" id="7_em8ly"]
[ext_resource type="LabelSettings" uid="uid://dda82tko0s777" path="res://UI/Styles/character select.tres" id="8_5ec5a"]

[sub_resource type="LabelSettings" id="LabelSettings_wsohl"]
line_spacing = -3.0
font = ExtResource("6_lkfh3")
font_color = Color(0.341176, 0.243137, 0.243137, 1)

[node name="Character Select Panel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 174.0
offset_bottom = 84.0
script = ExtResource("1_5w84g")

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.470588)
layout_mode = 0
offset_right = 174.0
offset_bottom = 84.0
mouse_filter = 2
texture = ExtResource("1_guiq0")

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 174.0
offset_bottom = 84.0
texture_normal = ExtResource("1_guiq0")

[node name="Seal" type="TextureRect" parent="."]
modulate = Color(0.321569, 0.192157, 0, 0.27451)
layout_mode = 0
offset_left = 70.0
offset_top = 8.0
offset_right = 139.0
offset_bottom = 77.0
mouse_filter = 2
texture = ExtResource("3_ghym1")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 7.0
offset_right = 139.0
offset_bottom = 32.0
mouse_filter = 2
texture = ExtResource("4_o3e15")

[node name="Quote" type="Label" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 30.0
offset_right = 171.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.301961, 0.262745, 0.239216, 1)
theme_override_colors/font_shadow_color = Color(0.643137, 0.643137, 0.643137, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("5_y8k1c")
theme_override_font_sizes/font_size = 16
text = "Quote goes here."
label_settings = SubResource("LabelSettings_wsohl")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -14.0
offset_right = 62.0
offset_bottom = 82.0
mouse_filter = 2
texture = ExtResource("7_em8ly")

[node name="Requirement" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 159.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.643137, 0.643137, 0.643137, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("5_y8k1c")
theme_override_font_sizes/font_size = 16
text = "This character is not playable at this time. Check back later!"
label_settings = ExtResource("8_5ec5a")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lock" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 65.0
offset_top = 21.0
offset_right = 118.0
offset_bottom = 66.0
mouse_filter = 2
texture = ExtResource("6_0407a")

[node name="Dimmer" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.470588)
layout_mode = 0
offset_right = 174.0
offset_bottom = 84.0
mouse_filter = 2
texture = ExtResource("1_guiq0")

[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_selected"]
